.k8s/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    name: backend-label
spec:
  containers:
  - name: backend-container
    image: mysite-backend
    imagePullPolicy: IfNotPresent
    command: [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8000
        name: backend-port

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    name: backend-label
  ports:
  - port: 80
    targetPort: backend-port
