.k8s/database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  labels:
    name: database-label
spec:
  containers:
  - name: database-container
    image: mysite-database
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
    ports:
      - containerPort: 3306
        name: database-port
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    name: database-label
  ports:
  - port: 3306
    targetPort: database-port
