.k8s/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    name: frontend-label
spec:
  containers:
  - name: frontend-container
    image: mysite-frontend
    imagePullPolicy: IfNotPresent
    command: [ "npm", "run", "dev" ]
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
    ports:
      - containerPort: 3000
        name: frontend-port
    volumeMounts:
      - mountPath: /frontend
        name: frontend-pod-volume
  volumes:
    - name: frontend-pod-volume
      hostPath:
        path: /mysite/frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    name: frontend-label
  ports:
  - port: 3000
    targetPort: frontend-port
